objects/Leave_Application__c/Leave_Application__c.object-meta.xml
<CustomObject>
    <label>Leave Application</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Leave Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Leave Applications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>