objects/Leave_Application__c/fields/Approve_Reject_Reason__c.field-meta.xml
<CustomField>
    <fullName>Approve_Reject_Reason__c</fullName>
    <label>Approve Reject Reason</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>