objects/Leave_Application__c/fields/Leave_Reason__c.field-meta.xml
<CustomField>
    <fullName>Leave_Reason__c</fullName>
    <label>Leave Reason</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>