objects/Leave_Application__c/fields/Number_of_days__c.field-meta.xml
<CustomField>
    <fullName>Number_of_days__c</fullName>
    <formula>To__c  -  From__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Number of days</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>