objects/Leave_Application__c/recordTypes/Parmanent_Employee.recordType-meta.xml
<RecordType>
    <fullName>Parmanent_Employee</fullName>
    <active>true</active>
    <label>Parmanent Employee</label>
</RecordType>