objects/Leave_Application__c/recordTypes/Temporary_Employee.recordType-meta.xml
<RecordType>
    <fullName>Temporary_Employee</fullName>
    <active>true</active>
    <label>Temporary Employee</label>
</RecordType>