objects/Leave_Application__c/validationRules/Applied_leaves_cannot_be_more_than_total.validationRule-meta.xml
<ValidationRule>
    <fullName>Applied_leaves_cannot_be_more_than_total</fullName>
    <active>true</active>
    <errorConditionFormula>Number_of_days__c  &gt;  Employee__r.Balance_Leave__c</errorConditionFormula>
    <errorMessage>Applied leaves cannot be more than total available leaves.</errorMessage>
</ValidationRule>