objects/Leave_Application__c/validationRules/To_Date_from_date.validationRule-meta.xml
<ValidationRule>
    <fullName>To_Date_from_date</fullName>
    <active>true</active>
    <errorConditionFormula>From__c &gt;  To__c</errorConditionFormula>
    <errorMessage>To date cannot be less than From date.</errorMessage>
</ValidationRule>